--- a/src/main/resources/templates/listausuarios.html
+++ b/src/main/resources/templates/listausuarios.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1> Nota para el grupo: 1</h1>
     <hl>
         <ul th:each="usuarios: ${usuarios}">
             <li>
