--- a/src/main/resources/templates/listausuarios.html
+++ b/src/main/resources/templates/listausuarios.html
@@ -7,13 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Nota para el grupo: 1</h1>
+    <h1><span style="color: palevioletred;"> LISTA DE USUARIOS </span></h1>
     <hl>
-        <!-- ul por table -->
-        <table>
+        <table style="width: 50%" border="1">
             <thead>
                 <tr>
-                    <td>Nombre</td>
+                    <td><span style="color:palevioletred"><b>NOMBRE</b></span></td>
+                    <td><span style="color:palevioletred"><b>1 APELLIDO</b></span></td>
+                    <td><span style="color:palevioletred"><b>2 APELLIDO</b></span></td>
+                    <td><span style="color:palevioletred"><b>ROL</b></span></td>
                 </tr>
             </thead>
             <tbody>
