--- a/src/main/resources/templates/formulario.html
+++ b/src/main/resources/templates/formulario.html
@@ -87,8 +87,7 @@
 
           
     <p>Apellido2: <input type="text" name="apellido2" size="40" placeholder="Escriba su segundo apellido" th:field="*{apellido2}"></p>
-    <label>Rol</label>
-    <input type="text" name="nombre" size="40" placeholder="estudiante/profesor">
+    <p>Rol: <input type="text" name="Rol" size="40" placeholder="Alumno o profesor" th:field="*{rol}"></p>
     <button type="submit">Guardar</button>
   </form>
 </body>
