--- a/src/main/resources/templates/Sorteos/ListaSorteos.html
+++ b/src/main/resources/templates/Sorteos/ListaSorteos.html
@@ -7,19 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Lista de sorteos</h1>
-    <table>
+    <table style="width: 50%" border="1">
         <thead>
+            <td colspan="3"><h1><span style="color: aqua;">Lista de sorteos</span></h1></td>
             <tr>
-                <td>
+                <td><span style="color:aqua">
                     Estado
-                </td>
-                <td>
+                </span></td>
+                <td><span style="color:aqua">
                     Fecha
-                </td>
-                <td>
+                </span></td>
+                <td><span style="color:aqua">
                     Descripcion
-                </td>
+                </span></td>
             </tr>
         </thead>
     <tr th:each="Sorteos: ${Sorteos}">
