cambios lista sorteos

--- a/src/main/resources/templates/Sorteos/formulariosorteos.html
+++ b/src/main/resources/templates/Sorteos/formulariosorteos.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="#" method="post" th:action="@{/CreateSorteos}" th:object="${SorteosDao}">
+  <form action="#" method="post" th:action="@{/CreateSorteos}" th:object="${sorteosDao}">
                 
 
     <legend>Datos personales:</legend>
