--- a/src/main/resources/templates/User/listausuarios.html
+++ b/src/main/resources/templates/User/listausuarios.html
@@ -25,7 +25,7 @@
                 <td th:text="${usuario.nombre}"></td>
                 <td th:text="${usuario.apellido1}"></td>
                 <td th:text="${usuario.apellido2}"></td>
-                <td th:text="${usuario.rol}"></td>
+                <td th:text="${usuario.Role}"></td>
             </tr>
         </tbody>
         </table>
